--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Late Fee Calculator</h1>
     <button onclick="calculateLateFees()">Calculate Late Fee</button>
 
-    <h1>Cost Per Person For Pizza</h1>
+    <h1>Cost Per Person For Pizza!</h1>
     <button onclick="calculatePizzaCost()">Calculate Cost Per Person</button>
 
     <h1>Click Tracker</h1>
