--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Late Fee Calculator</h1>
+    <h1>Late Fee Calculator!</h1>
     <button onclick="calculateLateFees()">Calculate Late Fee</button>
 
     <h1>Cost Per Person For Pizza!</h1>
